methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: type mismatch;
 found   : Unit
 required: Int
    for (i<-1 to nbPas) {
          ^MethodsArgs:3: error: type mismatch;
 found   : Unit
 required: Int
  if (versLavant==true) {
  ^