methods.args.MethodsArgs.scala.code
def move(nbPas:Int, versLavant: Boolean): Int = {
  if (versLavant==true) {
    for (i<-1 to nbPas) {
      avance(nbPas)
    } 
  }
}